// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact component renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
    }
  }
  testID="user_profile.contact"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": 16,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-SemiBold",
            "fontSize": 17,
          },
          Object {},
          undefined,
        ]
      }
      testID="info_card.title"
    >
      Contact
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "borderRadius": 8,
          },
          Array [
            undefined,
          ],
        ]
      }
      testID="button_wrapper"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 8,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingVertical": 4,
            },
            undefined,
            Object {
              "backgroundColor": "#EBF4FF",
              "height": 28,
              "paddingHorizontal": 8,
            },
          ]
        }
        testID="button.content"
      >
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
                Object {
                  "backgroundColor": undefined,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              <View
                testID="button.icon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingBottom": 16,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingBottom": 16,
          },
          undefined,
        ]
      }
      testID="info_item"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 14,
            },
            Object {
              "color": "#353E6E",
            },
            undefined,
          ]
        }
        testID="info_item.title"
      >
        Email
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Medium",
              "fontSize": 15,
            },
            Object {},
            Object {
              "marginTop": 4,
            },
          ]
        }
        testID="info_item.value"
      >
        email
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingBottom": 16,
          },
          undefined,
        ]
      }
      testID="info_item"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 14,
            },
            Object {
              "color": "#353E6E",
            },
            undefined,
          ]
        }
        testID="info_item.title"
      >
        Phone number
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Medium",
              "fontSize": 15,
            },
            Object {},
            Object {
              "marginTop": 4,
            },
          ]
        }
        testID="info_item.value"
      >
        (84) phone
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingBottom": 16,
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
      testID="info_item"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 14,
            },
            Object {
              "color": "#353E6E",
            },
            undefined,
          ]
        }
        testID="info_item.title"
      >
        Location
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Medium",
              "fontSize": 15,
            },
            Object {},
            Object {
              "marginTop": 4,
            },
          ]
        }
        testID="info_item.value"
      >
        city
      </Text>
    </View>
  </View>
</View>
`;

exports[`Contact component renders location Not set 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
    }
  }
  testID="user_profile.contact"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": 16,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-SemiBold",
            "fontSize": 17,
          },
          Object {},
          undefined,
        ]
      }
      testID="info_card.title"
    >
      Contact
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "borderRadius": 8,
          },
          Array [
            undefined,
          ],
        ]
      }
      testID="button_wrapper"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 8,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingVertical": 4,
            },
            undefined,
            Object {
              "backgroundColor": "#EBF4FF",
              "height": 28,
              "paddingHorizontal": 8,
            },
          ]
        }
        testID="button.content"
      >
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
                Object {
                  "backgroundColor": undefined,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              <View
                testID="button.icon"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingBottom": 16,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingBottom": 16,
          },
          undefined,
        ]
      }
      testID="info_item"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 14,
            },
            Object {
              "color": "#353E6E",
            },
            undefined,
          ]
        }
        testID="info_item.title"
      >
        Email
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Medium",
              "fontSize": 15,
            },
            Object {},
            Object {
              "marginTop": 4,
            },
          ]
        }
        testID="info_item.value"
      >
        email
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingBottom": 16,
          },
          undefined,
        ]
      }
      testID="info_item"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 14,
            },
            Object {
              "color": "#353E6E",
            },
            undefined,
          ]
        }
        testID="info_item.title"
      >
        Phone number
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Medium",
              "fontSize": 15,
            },
            Object {},
            Object {
              "marginTop": 4,
            },
          ]
        }
        testID="info_item.value"
      >
        (84) phone
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingBottom": 16,
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
      testID="info_item"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 14,
            },
            Object {
              "color": "#353E6E",
            },
            undefined,
          ]
        }
        testID="info_item.title"
      >
        Location
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Medium",
              "fontSize": 15,
            },
            Object {},
            Object {
              "marginTop": 4,
            },
          ]
        }
        testID="info_item.value"
      >
        Not set
      </Text>
    </View>
  </View>
</View>
`;
